demo-webapp/k8s/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-webapp
spec:
  selector:
    matchLabels:
      app: demo-webapp
  template:
    metadata:
      labels:
        app: demo-webapp
    spec:
      containers:
      - name: backend
        image: ${REGISTRY}/demo-webapp-backend:${TAG}
        ports:
        - containerPort: 5000
      - name: frontend
        image: ${REGISTRY}/demo-webapp-frontend:${TAG}
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-webapp
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: demo-webapp
